--- a/style.css
+++ b/style.css
@@ -1,1 +1,17 @@
+body {
+    .principal{
+        background:#69c767cc;
+        padding:30px;
+    }
 
+    h1 {
+        text-align: center
+    }
+
+    p {
+        text-align: center;
+    }
+
+    em strong
+
+}
