--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 body {
-    .principal{
+    .principal {
         background:#6da42ecc;
         padding:30px;
     }
 
     h1 {
-        text-align: center
+        text-align: center;
     }
 
     p {
@@ -17,7 +17,7 @@ body {
     }
 
     .itens {
-        font-style: italic 
+        font-style: italic;
     }
 
     h2 {
@@ -37,4 +37,4 @@ body {
     .imagemprevenirdoenças {
         width: 50%;
     }
-    .
+    
